# vms-wasm-ai-on-k8s

./: LICENSE  Makefile  README.md
examples/hello-spinkube/: Cargo.toml  spin.toml
examples/hello-spinkube/src/: lib.rs
examples/hello-webserver/: spin.toml
examples/hello-webserver/assets/: index.html
kubevirt/: dv_cirros.yaml  dv_fedora.yaml  dv_gke_storageclass.yaml  kubevirt-cr.yaml  testhpa.yaml  testreplicaset.yaml  testshell.yaml  testvm.yaml
ollama/: deepseek-r1.yaml  kustomization.yaml  llama31.yaml
spinkube/: kustomization.yaml
