[package]
name = "hello-spinkube"
authors = ["M.-Leander Reimer <mario-leander.reimer@qaware.de>"]
description = "HTTP request handler demo using Rust running on Spinkube"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.1.0"

[workspace]
